using dotenv for env vars

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "server for action technique app",
   "scripts": {
     "start": "node src/startServer.js",
-    "live": "nodemon src/startServer.js", 
+    "start:live": "nodemon src/startServer.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Daniel Schwartz <daniel.schwartz@applitools.com>",
@@ -17,6 +17,7 @@
     "prettier": "^1.17.0"
   },
   "dependencies": {
+    "dotenv": "^7.0.0",
     "express": "^4.16.4"
   }
 }
